# Nanovoltmeter

./: README.md
Batt_Rev21/: Batt_Rev21-cache.lib  Batt_Rev21.kicad_pcb  Batt_Rev21.kicad_pcb-bak  Batt_Rev21.kicad_prl  Batt_Rev21.kicad_pro  Batt_Rev21.kicad_sch  Batt_Rev21.kicad_sch-bak  Batt_Rev21.pro  Batt_Rev21.sch  Batt_Rev21.sch-bak  Batt_Rev21.xml  fp-info-cache
NVM-FP_revB/: NVM-FP_revB.kicad_pcb  NVM-FP_revB.kicad_prl  NVM-FP_revB.kicad_pro  NVM-FP_revB.kicad_sch  fp-info-cache
NVM-RP-CHG/: NVM-RP-CHG.kicad_pcb  NVM-RP-CHG.kicad_prl  NVM-RP-CHG.kicad_pro  NVM-RP-CHG.kicad_sch  NVM-RP-CHG.kicad_sch-bak
NVM_RevB_FW/: NVM_RevB+Target_1.cbuild.yml  NVM_RevB+Target_1.cprj  NVM_RevB.cbuild-idx.yml  NVM_RevB.cbuild-pack.yml  NVM_RevB.cproject.yml  NVM_RevB.csolution.yml  NVM_RevB.uvguix.Curtis  NVM_RevB.uvoptx  NVM_RevB.uvprojx  NVM_RevB_2.uvguix.Curtis  NVM_RevB_2.uvoptx  NVM_RevB_2.uvprojx  vcpkg-configuration.json
NVM_RevB_FW/Listings/: NVM_RevB.map
NVM_RevB_FW/RTE/Device/STM32U575RITx/: startup_stm32u575xx.c.base@1.0.0  startup_stm32u575xx.s.base@2.0.0  stm32u575xx_flash.sct.base@2.0.0
NVM_RevB_FW/RTE/Device/STM32U575RITxQ/: stm32u575xx_flash_ns.sct  system_stm32u5xx_ns.c.base@1.3.0
NVM_RevB_FW/RTE/_Target_1/: RTE_Components.h
NVM_RevB_FW/include/: acq.h  acq_private.h  ad403x.h  ad5686.h  adc.h  cmd_handler.h  cmd_handler_private.h  dac.h  dma.h  fifo.h  gpio.h  i2c.h  it.h  lexer.h  main.h  nvmb.h  ospi.h  serial_io.h  sinc.h  spi.h  stm32u5xx.h  sys_cfg.h  tim.h  tmp117.h  uart.h
NVM_RevB_FW/src/: acq.c  ad403x.c  ad5686.c  adc.c  cmd_handler.c  dac.c  dma.c  fifo.c  gpio.c  i2c.c  it.c  lexer.c  main.c  nvmb.c  ospi.c  serial_io.c  sinc.c  spi.c  sys_cfg.c  tim.c  tmp117.c  uart.c
NVM_RevB_FW/tmp/NVM_RevB/Target_1/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json
nV-Meter_rev_b/: ADC.kicad_sch  ADR1399ref.kicad_sch  GateDrives.kicad_sch  Inputsentry.kicad_sch  LevelShift.kicad_sch  PS.kicad_prl  PS.kicad_pro  PS.kicad_sch  PS.kicad_sch-bak  PS.sch  RelayDrv.kicad_sch  chopper.kicad_sch  fp-info-cache  input.kicad_sch  nV-Meter_rev_b-cache.lib  nV-Meter_rev_b.csv  nV-Meter_rev_b.kicad_prl  nV-Meter_rev_b.kicad_pro  nV-Meter_rev_b.kicad_sch  nV-Meter_rev_b.kicad_sch-bak  nV-Meter_rev_b.pro  nV-Meter_rev_b.sch  nV-Meter_rev_b.sch-bak  nV-Meter_rev_b.xml  sym-lib-table  uC-ADC.kicad_sch  uC-DAC.kicad_sch
nV_Meter_PS_rev_b/: fp-info-cache  nV_Meter_PS_rev_b.kicad_pcb  nV_Meter_PS_rev_b.kicad_prl  nV_Meter_PS_rev_b.kicad_pro  nV_Meter_PS_rev_b.kicad_sch
